--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+
 <html>
-    
+    <head>
+        <title>Tytul</title>
+    </head>
+    <body>
+        Nasz tekst
+    </body>
 </html>
