dwa dokumenty linki

--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
         <title>Tytul</title>
     </head>
     <body>
-        Nasz tekst
+        <h1>Jan Nowak - życiorys</h1>
+        <p>
+            <span>Lorem ipsum lorem ipsum</span> ipsum lorem<br>                       
+            ipsum ipsum lorem ipsum ipsum lorem<br>
+            <a href="index2.html">link do innego dokumentu</a> lorem ipsum ipsum lorem<br>
+            ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum
+        </p>
+        <h2>Jan Nowak - nagrody</h2>
+        <p>
+            Lorem ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum
+        </p>
+        <p>
+            Lorem ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum
+        </p>
     </body>
 </html>
