przyklad sem tagow

--- a/index.html
+++ b/index.html
@@ -5,20 +5,44 @@
         <title>Tytul</title>
     </head>
     <body>
-        <h1>Jan Nowak - życiorys</h1>
-        <p>
-            <span>Lorem ipsum lorem ipsum</span> ipsum lorem<br>                       
-            ipsum ipsum lorem ipsum ipsum lorem<br>
-            <a href="index2.html">link do innego dokumentu</a> lorem ipsum ipsum lorem<br>
-            ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum
-        </p>
-        <h2>Jan Nowak - nagrody</h2>
-        <p>
-            Lorem ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum
-        </p>
-        <p>
-            Lorem ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum
-        </p>
-        <img src="img/yerka.jpg" width="100%">
+
+        <nav>
+            <p>Menu:</p>
+            <a href="index2.html#produkty">PRodukty</a>
+            <a href="">Uslugiy</a>
+            <a href="">PRodukty</a>
+            <a href="">Uslugiy</a>
+        </nav>
+
+        <main>
+            <article>
+                <h1>Jan Nowak - życiorys</h1>
+                <p>
+                    <span>Lorem ipsum lorem ipsum</span>
+                    ipsum lorem<br>                       
+                    ipsum ipsum lorem ipsum ipsum lorem<br>
+                    <a href="index2.html">link do innego dokumentu</a> lorem ipsum ipsum lorem<br>
+                    ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum
+                </p>
+            </article>
+            <article>
+                <h2>Jan Nowak - nagrody</h2>
+                <p>
+                    Lorem ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum
+                </p>
+                <p>
+                    Lorem ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum
+                </p>
+            </article>
+        </main>
+
+
+        Ala
+        <div>
+            ma
+        </div>
+        kota
+
+        <img src="img/yerka.jpg" width="100%" id="produkty">
     </body>
 </html>
