--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Dokument 2</h1>
-        <p>
+        <p id="produkty">
             <a href="index.html">Powrót</a>
         </p>
     </body>
