--- a/index.html
+++ b/index.html
@@ -33,6 +33,58 @@
                 <p>
                     Lorem ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum
                 </p>
+
+                <ul>
+                    <li>Złoty medal Biennale w Wenecji 2015</li>
+                    <li>Złoty medal Biennale w Berlinie 2019</li>
+                    <li>Wyróznienia w 2020</li>
+                    <ul>
+                        <li>Nagroda Wójta gminy Nędza</li>
+                        <li>Nagroda Wójta gminy Mącikał</li>
+                    </ul>
+                </ul>
+
+                <table width="100%" border="1">
+                    <caption>Dzieła</caption>
+                    <thead>
+                        <tr>
+                            <th>
+                                Tytuł
+                            </th>
+                            <th>
+                                Rok
+                            </th>
+                            <th>
+                                Cena
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                Kot I
+                            </td>
+                            <td>
+                                2022
+                            </td>
+                            <td>
+                                30000
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Pies VIII
+                            </td>
+                            <td>
+                                2020
+                            </td>
+                            <td>
+                                19000
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
             </article>
         </main>
 
