--- a/index.html
+++ b/index.html
@@ -75,14 +75,24 @@
                             <td>
                                 Pies VIII
                             </td>
-                            <td>
+                            <td rowspan="2">
                                 2020
                             </td>
-                            <td>
+                            <td rowspan="2">
                                 19000
                             </td>
                         </tr>
+                        <tr>
+                            <td>
+                                Kot III
+                            </td>
+                        </tr>
                     </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="3">Wkrótce nowe dzieła</td>
+                        </tr>
+                    </tfoot>
                 </table>
 
             </article>
