--- a/index.html
+++ b/index.html
@@ -96,7 +96,57 @@
                 </table>
 
             </article>
+
+            <article>
+                <h1>Zapisz się na wystawę</h1>
+                <p>zajawka zajawka zajawka zajawka zajawka zajawka zajawka zajawka zajawka </p>
+
+                <form action="index.jsp" method="post">
+
+                    <label for="imieid">
+                        Imię
+                    </label>
+                    <input type="text" name="imie" id="imieid">
+
+                    <label for="nazwiskoid">
+                        Nazwisko
+                    </label>
+                    <input type="text" name="nazwisko" id="nazwiskoid">
+
+                    <label for="hasloid">
+                        Hasło
+                    </label>  
+                    <input type="password" name="haslo" id="hasloid">
+
+
+                    <select multiple size="3">
+                        <option value="1" selected>Jeden</option>
+                        <option value="2" selected>Dwa</option>
+                        <option value="3" selected>Trzy</option>
+                    </select>
+
+                    <textarea>
+
+                    </textarea>
+
+                    <!--
+                    <input type="color">
+                    <input type="datetime">
+                    <input type="range">
+                    <input type="time">
+                    <input type="tel">
+                    <input type="week">
+                    -->
+
+                </form>
+
+
+            </article>
         </main>
+
+
+
+
 
 
         Ala
