--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
 <html>
     <head>
         <title>Tytul</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
 
         <nav>
             <p>Menu:</p>
-            <a href="index2.html#produkty">PRodukty</a>
-            <a href="">Uslugiy</a>
-            <a href="">PRodukty</a>
-            <a href="">Uslugiy</a>
+                <a href="index2.html#produkty">PRodukty</a>
+                <a href="">Uslugiy</a>
+                <a href="">PRodukty</a>
+                <a href="">Uslugiy</a>
         </nav>
 
         <main>
             <article>
-                <h1>Jan Nowak - życiorys</h1>
+                <h1 id="zyciorys">Jan Nowak - życiorys</h1>
                 <p>
                     <span>Lorem ipsum lorem ipsum</span>
                     ipsum lorem<br>                       
