--- a/index.html
+++ b/index.html
@@ -7,22 +7,32 @@
     </head>
     <body>
 
-        <nav>
+        <header>
+            <div class="lewa">
+                Jan Nowak Gallery
+            </div><div class="menu">
+                <span>+</span> / <span>-</span> Menu
+            </div>
+            <!--img src="img/yerka.jpg" width="100%" id="produkty"-->
+
+        </header>
+
+        <!--nav>
             <p>Menu:</p>
                 <a href="index2.html#produkty">PRodukty</a>
                 <a href="">Uslugiy</a>
                 <a href="">PRodukty</a>
                 <a href="">Uslugiy</a>
-        </nav>
+        </nav-->
 
         <main>
             <article>
                 <h1 id="zyciorys">Jan Nowak - życiorys</h1>
                 <p>
                     <span>Lorem ipsum lorem ipsum</span>
-                    ipsum lorem<br>                       
-                    ipsum ipsum lorem ipsum ipsum lorem<br>
-                    <a href="index2.html">link do innego dokumentu</a> lorem ipsum ipsum lorem<br>
+                    ipsum lorem<!--br-->                       
+                    ipsum ipsum lorem ipsum ipsum lorem<!--br-->
+                    <a href="index2.html">link do innego dokumentu</a> lorem ipsum ipsum lorem<!--br-->
                     ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum ipsum lorem ipsum
                 </p>
             </article>
@@ -186,13 +196,5 @@
 
 
 
-
-        Ala
-        <div>
-            ma
-        </div>
-        kota
-
-        <img src="img/yerka.jpg" width="100%" id="produkty">
     </body>
 </html>
