--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </ul>
                 </ul>
 
-                <table width="100%" border="1">
+                <table>
                     <caption>Dzieła</caption>
                     <thead>
                         <tr>
