--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>Tytul</title>
         <link rel="stylesheet" href="style.css">
+        <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
 
@@ -11,7 +12,7 @@
             <div class="lewa">
                 Jan Nowak Gallery
             </div><div class="menu">
-                <span>+</span> / <span>-</span> Menu
+                <span id="plus">+</span> / <span id="minus">-</span> Menu
             </div>
             <!--img src="img/yerka.jpg" width="100%" id="produkty"-->
 
