--- a/index.html
+++ b/index.html
@@ -113,11 +113,12 @@
                 <h1>Zapisz się na wystawę</h1>
                 <p>zajawka zajawka zajawka zajawka zajawka zajawka zajawka zajawka zajawka </p>
 
-                <form action="index.jsp" method="post">
+                <form action="index.jsp" method="post" name="forma">
 
                     <label for="imieid">
                         Imię
                     </label>
+                    
                     <input type="text" name="imie" id="imieid" accesskey="i" tabindex="3">
 
                     <label for="nazwiskoid">
